--- a/src/site/_includes/partials/post.njk
+++ b/src/site/_includes/partials/post.njk
@@ -17,10 +17,6 @@
     {% SubscribeAction %}
   {% endActions %}
 
-  <div class="w-layout-container--narrow w-post-breadcrumbs">
-    {% Breadcrumbs path %}
-  </div>
-
   <main class="w-layout-container--narrow w-post-content">
     <header class="w-article-header">
       <h1 class="w-article-header__headline">{{ title }}</h1>
@@ -82,44 +78,6 @@
     {% endif %}
   </main>
 
-  {% if path.slug === 'blog' %}
-    {# Find next blog post #}
-    {% ArticleNavigation {
-      back: '/blog',
-      backLabel: 'Return to all articles',
-      collection: collections.posts,
-      slug: page.fileSlug
-    } %}
-  {% else %}
-    {# Find next item in this learning path #}
-    {% ArticleNavigation {
-      back: '/' + path.slug,
-      backLabel: 'Return to all articles',
-      path: path,
-      collection: collections[path.slug],
-      slug: page.fileSlug
-    } %}
-  {% endif %}
+  {% RelatedContent page.fileSlug %}
 
-  {# Hide related content for now. #}
-  {# <div>
-    <!-- Unstyled -->
-    <h3>Related content</h3>
-    <ul>
-      {% if related_content %} {% for url in related_content %}
-      <li>
-        <a href="{{ url | stripLanguage }}">{{
-          macros.getTitleFromUrl(url, collections.all)
-        }}</a>
-      </li>
-      {% endfor %} {% endif %} {% for article in collections.all %} {% set
-      isRelated = article | containsTag(tags) %} {% if isRelated %}
-      <li>
-        <a href="{{ article.url | stripLanguage }}">
-          {{ article.data.title }}
-        </a>
-      </li>
-      {% endif %} {% endfor %}
-    </ul>
-  </div> #}
 </div>
