--- a/src/styles/generic/_type.scss
+++ b/src/styles/generic/_type.scss
@@ -89,5 +89,5 @@ strong {
 devsite-content-footer p {
   font-size: 12px; // DevSite override
   line-height: 1.5; // DevSite override
-  padding-top: 72px; // DevSite override
+  padding-top: 0; // DevSite override
 }
