--- a/src/site/_includes/partials/post.njk
+++ b/src/site/_includes/partials/post.njk
@@ -56,7 +56,7 @@
     </div>
     #}
 
-    <div class="w-post-github-link w-mt--l w-mb--l">
+    <div class="w-post-github-link w-mt--l">
       <span class="w-mr--sm">
         {% if updated %}
         Last updated: <time>{{ updated | prettyDate }}</time>
