--- a/src/styles/components/_all.scss
+++ b/src/styles/components/_all.scss
@@ -22,6 +22,7 @@
 @import 'page-header';
 @import 'path-card';
 @import 'post-card';
+@import 'related-content';
 @import 'stats';
 @import 'type';
 @import 'youtube';
