Show back button for blog posts.

--- a/src/site/content/en/learn/index.njk
+++ b/src/site/content/en/learn/index.njk
@@ -20,7 +20,7 @@ description: |
   </div>
   <section class="w-grid">
     <div class="w-grid__columns w-grid__columns--gapless w-grid__columns--three">
-      <h3 id="principles" class="w-learn-heading">
+      <h3 id="principles" class="w-headline--indented">
         Realize what the web can be
         <a class="w-headline-link" href="#principles" aria-hidden="true">#</a>
       </h3>
@@ -33,7 +33,7 @@ description: |
   </section>
   <section class="w-grid">
     <div class="w-grid__columns w-grid__columns--gapless w-grid__columns--three">
-      <h3 id="frameworks" class="w-learn-heading">
+      <h3 id="frameworks" class="w-headline--indented">
         Frameworks
         <a class="w-headline-link" href="#frameworks" aria-hidden="true">#</a>
       </h3>
@@ -46,7 +46,7 @@ description: |
   </section>
   <section class="w-grid">
     <div class="w-grid__columns w-grid__columns--gapless w-grid__columns--three">
-      <h3 id="lighthouse" class="w-learn-heading">
+      <h3 id="lighthouse" class="w-headline--indented">
         Lighthouse
         <a class="w-headline-link" href="#lighthouse" aria-hidden="true">#</a>
       </h3>
