--- a/src/styles/components/_icon-list.scss
+++ b/src/styles/components/_icon-list.scss
@@ -27,6 +27,6 @@
 }
 
 .w-icon-list__item--check::before {
-  color: $WEB_PRIMARY_COLOR;
+  color: $WEB_EXTENDED_TERTIARY_COLOR;
   content: 'done';
 }
