--- a/src/lib/components/Tabs/_styles.scss
+++ b/src/lib/components/Tabs/_styles.scss
@@ -34,7 +34,6 @@ web-tabs {
     flex: 1 0 auto;
     height: 48px;
     margin: 0;
-    opacity: .6;
   }
 
   @include hover() {
@@ -56,7 +55,6 @@ web-tabs {
 
   .web-tabs__tab[aria-selected="true"] {
     color: $SUCCESS_COLOR;
-    opacity: 1;
   }
 
   .web-tabs__tab[aria-selected="true"]::after {
@@ -68,6 +66,14 @@ web-tabs {
     left: 0;
     position: absolute;
     right: 0;
+  }
+
+  .web-tabs__text-label {
+    opacity: .6;
+  }
+
+  .web-tabs__tab[aria-selected="true"] .web-tabs__text-label {
+    opacity: 1;
   }
 
   .web-tabs__panel[hidden] {
