--- a/src/lib/components/Tabs/_styles.scss
+++ b/src/lib/components/Tabs/_styles.scss
@@ -16,6 +16,7 @@
  */
 
 @import '../../../styles/settings/colors';
+@import '../../../styles/settings/global';
 @import '../../../styles/tools/mixins';
 
 web-tabs {
@@ -57,8 +58,8 @@ web-tabs {
     color: $SUCCESS_COLOR;
   }
 
-  .web-tabs__tab[aria-selected="true"]::after {
-    background: $SUCCESS_COLOR;
+  .web-tabs__tab::after {
+    background: transparent;
     bottom: 0;
     content: '';
     display: block;
@@ -66,6 +67,11 @@ web-tabs {
     left: 0;
     position: absolute;
     right: 0;
+    transition: $TRANSITION_SPEED;
+  }
+
+  .web-tabs__tab[aria-selected="true"]::after {
+    background: $SUCCESS_COLOR;
   }
 
   .web-tabs__text-label {
