--- a/src/site/_includes/partials/post.njk
+++ b/src/site/_includes/partials/post.njk
@@ -1,6 +1,13 @@
 {# *-landing-page classes are a holdover from devsite. #}
 {# It would be great to remove them as part of the v1 migration. #}
 <div class="guide-landing-page">
+
+  <div class="w-toc">
+    <button class="w-toc__button w-button w-button--secondary w-button--icon" data-icon="toc"></button>
+  </div>
+
+  <web-actions actions="share|subscribe" authors="{{ authors | expandContributors | join('|') }}"></web-actions>
+
   {% if hero %}
     {% Hero {
       page: page,
@@ -10,9 +17,6 @@
       heroFit: hero_fit
     } %}
   {% endif %}
-
-  {# Make sure Actions are first in the tab order. #}
-  <web-actions actions="share|subscribe" authors="{{ authors | expandContributors | join('|') }}"></web-actions>
 
   <div class="w-layout-container--narrow w-post-breadcrumbs">
     {% Breadcrumbs path %}
@@ -84,46 +88,25 @@
     {% endif %}
   </div>
 
-  {% if path.slug === 'blog' %}
-    {# Find next blog post #}
-    {% ArticleNavigation {
-      back: '/blog',
-      backLabel: 'Return to all articles',
-      collection: collections.posts,
-      slug: page.fileSlug,
-      lang: lang
-    } %}
-  {% else %}
-    {# Find next item in this learning path #}
-    {% ArticleNavigation {
-      back: '/' + path.slug,
-      backLabel: 'Return to all articles',
-      path: path,
-      collection: collections[path.slug],
-      slug: page.fileSlug,
-      lang: lang
-    } %}
-  {% endif %}
-
-  {# Hide related content for now. #}
-  {# <div>
-    <!-- Unstyled -->
-    <h3>Related content</h3>
-    <ul>
-      {% if related_content %} {% for url in related_content %}
-      <li>
-        <a href="{{ url | stripLanguage }}">{{
-          macros.getTitleFromUrl(url, collections.all)
-        }}</a>
-      </li>
-      {% endfor %} {% endif %} {% for article in collections.all %} {% set
-      isRelated = article | containsTag(tags) %} {% if isRelated %}
-      <li>
-        <a href="{{ article.url | stripLanguage }}">
-          {{ article.data.title }}
-        </a>
-      </li>
-      {% endif %} {% endfor %}
-    </ul>
-  </div> #}
 </div>
+
+{% if path.slug === 'blog' %}
+  {# Find next blog post #}
+  {% ArticleNavigation {
+    back: '/blog',
+    backLabel: 'Return to all articles',
+    collection: collections.posts,
+    slug: page.fileSlug,
+    lang: lang
+  } %}
+{% else %}
+  {# Find next item in this learning path #}
+  {% ArticleNavigation {
+    back: '/' + path.slug,
+    backLabel: 'Return to all articles',
+    path: path,
+    collection: collections[path.slug],
+    slug: page.fileSlug,
+    lang: lang
+  } %}
+{% endif %}
