--- a/src/styles/components/_all.scss
+++ b/src/styles/components/_all.scss
@@ -27,6 +27,7 @@
 @import 'progress';
 @import 'self-assessment-hint';
 @import 'stats';
+@import 'toc';
 @import 'topic';
 @import 'type';
 @import 'tooltips';
