--- a/src/styles/components/_toc.scss
+++ b/src/styles/components/_toc.scss
@@ -1,9 +1,12 @@
 .w-toc {
   display: flex;
-  justify-content: flex-end;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
+  height: calc(100vh - 88px);
   // Because position sticky works like position relative, we need to remove
   // the white space created by this element and its padding.
-  margin-top: -66px;
+  margin-top: calc(-100vh + 88px);
   padding-bottom: 24px;
   padding-right: 24px;
   position: sticky;
