--- a/src/site/content/en/measure/index.njk
+++ b/src/site/content/en/measure/index.njk
@@ -29,6 +29,8 @@ to remove them as part of the v1 migration. #}
     </header>
   </div>
 
+  <web-lighthouse-subscribe></web-lighthouse-subscribe>
+
   <div class="w-measure-results">
     <div class="w-layout-container">
       <web-url-chooser-container></web-url-chooser-container>
